--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,11 @@ default = []
 experimental = ["esp-idf-svc/experimental"]
 
 [dependencies]
-log = "0.4"
+esp-idf-sys = "0.36.1"
 esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
-esp-idf-hal = "0.45.2"
+esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
 anyhow = "1.0.98"
+log = "0.4"
 
 [build-dependencies]
 embuild = "0.33"
