--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,12 @@ esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-
 esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
 anyhow = "1.0.98"
 log = "0.4"
+heapless = { version = "0.8.0", features = ["serde"] }
+serde = "1.0.219"
+serde_json = "1.0.140"
+askama = "0.12.1"
+urlencoding = "2.1.3"
+serde_urlencoded = "0.7.1"
 
 [build-dependencies]
 embuild = "0.33"
