--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.140"
 askama = "0.12.1"
 urlencoding = "2.1.3"
 serde_urlencoded = "0.7.1"
+embedded-svc = "0.28.1"
 
 [build-dependencies]
 embuild = "0.33"
