--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ opt-level = "s"
 [profile.dev]
 debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
+panic = "unwind"
 
 [features]
 default = []
@@ -38,3 +39,4 @@ embedded-svc = "0.28.1"
 
 [build-dependencies]
 embuild = "0.33"
+
