--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ askama = "0.12.1"
 urlencoding = "2.1.3"
 serde_urlencoded = "0.7.1"
 embedded-svc = "0.28.1"
+enumset = "1.1.6"
 
 [build-dependencies]
 embuild = "0.33"
