--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ rust-version = "1.77"
 #harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors
 
 [profile.release]
-opt-level = "s"
+opt-level = "z"
+lto = true
 
 [profile.dev]
 debug = true    # Symbols are nice and they don't increase the size on Flash
